antsurance/force-app/main/default/objects/Antsurance_Event__mdt/Antsurance_Event__mdt.object-meta.xml
<CustomObject>
    <description>A weather or catastrophe event shown on the Event response page: what it was, when, and the area it crossed. Add a record in Setup to plan for a new event; nothing here is a customer record. The records that ship are samples.</description>
    <label>Antsurance Event</label>
    <pluralLabel>Antsurance Events</pluralLabel>
</CustomObject>