antsurance/force-app/main/default/objects/Antsurance_Event__mdt/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>The towns or neighborhoods the event crossed, in words, for the page heading.</description>
    <inlineHelpText>For example: Naperville, Wheaton and Geneva.</inlineHelpText>
    <label>Area</label>
    <length>120</length>
    <type>Text</type>
</CustomField>