antsurance/force-app/main/default/objects/Antsurance_Event__mdt/fields/Center_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Center_Latitude__c</fullName>
    <description>Latitude of the middle of the area the event crossed, in decimal degrees. Two decimal places are enough.</description>
    <inlineHelpText>Decimal degrees, for example 41.81.</inlineHelpText>
    <label>Center Latitude</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>