antsurance/force-app/main/default/objects/Antsurance_Event__mdt/fields/Center_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Center_Longitude__c</fullName>
    <description>Longitude of the middle of the area the event crossed, in decimal degrees. West is negative.</description>
    <inlineHelpText>Decimal degrees, west is negative, for example -88.18.</inlineHelpText>
    <label>Center Longitude</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>