antsurance/force-app/main/default/objects/Antsurance_Event__mdt/fields/Claim_Rate_High__c.field-meta.xml
<CustomField>
    <fullName>Claim_Rate_High__c</fullName>
    <description>Planning assumption: the high end of the share of exposed homes, buildings and vehicles expected to file a claim, as a whole percent.</description>
    <inlineHelpText>A whole percent, for example 35.</inlineHelpText>
    <label>Claims Expected, High Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>