antsurance/force-app/main/default/objects/Antsurance_Event__mdt/fields/Days_Ago__c.field-meta.xml
<CustomField>
    <fullName>Days_Ago__c</fullName>
    <description>How many days before today the event happened, used when Event Date is empty. 0 is today, 1 is last night.</description>
    <inlineHelpText>Used only when Event Date is empty. 1 means last night.</inlineHelpText>
    <label>Days Ago</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>