antsurance/force-app/main/default/objects/Antsurance_Event__mdt/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>The day of the event. Leave empty and fill Days Ago for an event that should always read as recent.</description>
    <inlineHelpText>The day it happened. Leave empty to use Days Ago.</inlineHelpText>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>