antsurance/force-app/main/default/objects/Antsurance_Event__mdt/fields/Footprint_Points__c.field-meta.xml
<CustomField>
    <fullName>Footprint_Points__c</fullName>
    <description>Optional outline of the area as corner points, used in place of the center and radius: latitude,longitude pairs separated by semicolons, at least three.</description>
    <inlineHelpText>Optional. Pairs like 41.80,-88.20; 41.90,-88.10; 41.75,-88.05</inlineHelpText>
    <label>Outline Points</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>