antsurance/force-app/main/default/objects/Antsurance_Event__mdt/fields/Peril__c.field-meta.xml
<CustomField>
    <fullName>Peril__c</fullName>
    <description>What kind of event this was. It decides which coverages the page counts as responding.</description>
    <inlineHelpText>Hail, wind, tornado or flood.</inlineHelpText>
    <label>Peril</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Hail</fullName><default>true</default><label>Hail</label></value>
            <value><fullName>Wind</fullName><default>false</default><label>Wind</label></value>
            <value><fullName>Tornado</fullName><default>false</default><label>Tornado</label></value>
            <value><fullName>Flood</fullName><default>false</default><label>Flood</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>