antsurance/force-app/main/default/objects/Antsurance_Event__mdt/fields/Radius_Miles__c.field-meta.xml
<CustomField>
    <fullName>Radius_Miles__c</fullName>
    <description>How far the event reached from its center, in miles. Used when no outline is given.</description>
    <inlineHelpText>Miles from the center to the edge.</inlineHelpText>
    <label>Radius in Miles</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>