antsurance/force-app/main/default/objects/Antsurance_Event__mdt/fields/Severity_Note__c.field-meta.xml
<CustomField>
    <fullName>Severity_Note__c</fullName>
    <description>One sentence on how severe the event was, as reported. Shown on the page and given to Claude.</description>
    <inlineHelpText>One plain sentence, for example the hail size or rainfall reported.</inlineHelpText>
    <label>What Was Reported</label>
    <length>255</length>
    <type>Text</type>
</CustomField>