antsurance/force-app/main/default/objects/Antsurance_Event__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Where the event sits in the list on the page, lowest first.</description>
    <inlineHelpText>Lowest shows first.</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>